Fix: Implement authentication flow
This commit implements the authentication flow using MSAL and the backend API. It includes the following changes:

-   Added MSAL provider and hooks for authentication.
-   Implemented login and logout functionality.
-   Added token acquisition and refresh logic.
-   Integrated backend authentication.
-   Added error handling and user feedback.