@@ -6,10 +6,13 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.web.SecurityFilterChain;
+import ist.leaves.service.UserService;
+import ist.leaves.security.OAuth2AuthenticationFailureHandler;
+import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
-import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
 import java.util.Arrays;
 import java.util.List;
@@ -18,44 +21,56 @@ import java.util.List;
 @EnableWebSecurity
 public class SecurityConfig {
 
+    private final UserService userService;
+    private final OAuth2AuthenticationFailureHandler oAuth2FailureHandler;
+
+    public SecurityConfig(UserService userService,
+                          OAuth2AuthenticationFailureHandler oAuth2FailureHandler) {
+        this.userService = userService;
+        this.oAuth2FailureHandler = oAuth2FailureHandler;
+    }
+
     @Bean
-    public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-        // Configure security to permit OPTIONS requests and handle them properly
+    public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-            .cors().and()
-            .csrf().disable()
-            .authorizeRequests()
-            // Allow OPTIONS requests without authentication
-            .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-            // Your other security rules...
-            .anyRequest().authenticated();
-            
+                .cors(cors -> cors.configurationSource(corsConfigurationSource()))  // Enable CORS with our custom source
+                .csrf(csrf -> csrf.disable())
+                .authorizeHttpRequests(auth -> auth
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()  // Allow OPTIONS requests without auth
+                        .requestMatchers("/", "/error", "/login**", "/api/auth/**").permitAll()  // Allow auth endpoints
+                        .anyRequest().authenticated()
+                )
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
+                .oauth2Login(oauth -> oauth
+                        .userInfoEndpoint(userInfo -> userInfo
+                                .userService(userService)
+                        )
+                        .failureHandler(oAuth2FailureHandler)
+                        .successHandler((request, response, authentication) -> {
+                            // Return a 200 OK response instead of redirecting
+                            response.setStatus(200);
+                            response.getWriter().write("{\"status\":\"success\",\"message\":\"Authentication successful\"}");
+                            response.setContentType("application/json");
+                        })
+                )
+                .logout(logout -> logout
+                        .logoutSuccessUrl("/").permitAll()
+                );
         return http.build();
     }
 
     @Bean
     CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(Arrays.asList(
-            "http://localhost",
-            "http://localhost:80",
-            "http://localhost:3000",
-            "http://localhost:8080",
-            "http://127.0.0.1",
-            "http://127.0.0.1:80", 
-            "http://127.0.0.1:3000",
-            "http://127.0.0.1:8080",
-            "http://frontend",
-            "https://b1c7be00-4b60-43f3-be03-67e3b81ad66a.lovableproject.com",
-            "https://preview--employee-leave-system.lovable.app",
-            "https://*.lovable.app"
-        ));
+        configuration.setAllowedOrigins(List.of("*"));  // Allow all origins
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(Arrays.asList("Authorization"));
-        configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(List.of("Authorization"));
+        // Note: allowCredentials is false because it can't be used with allowedOrigins("*")
         configuration.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
